# Agent-Hire-Arena

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  blog.md  capture_and_save.py  capture_logs.py  cleanup.bat  cleanup.py  cleanup.sh  cleanup_and_push.py  cleanup_final.py  cleanup_logs.py  client.py  final.py  final_clean.py  final_cleanup.py  inference.py  models.py  openenv.yaml  policy.py  push_github.bat  push_to_github.ps1  pyproject.toml  requirements.txt  run_and_capture.py  run_and_save.bat  run_baseline.ps1  space.toml  x.py
.github/workflows/: ci.yml
data/: grpo_agenthire_val.jsonl
logs/: real_baseline_run.txt
outputs/: output_baseline.txt
scripts/: benchmark_policies.py  check_endpoints.py  check_ui.py  generate_grpo_dataset.py  generate_reward_evidence.py  plot_failure_curves.py  run_full_episode.py  run_inference.py  run_seed_sweep.py
server/: __init__.py  app.py  candidate_generator.py  environment.py  grader.py  npc_message_bank.json  tasks.py  ui.py
static/: index.html  script.js  style.css
tests/: test_environment.py  test_grader.py  test_inference_policy.py
training/: README.md  solving_nightmare_via_post_training.ipynb
